# kk-plates

./: .gitignore  Makefile  README.md  analyze_csv_timeline.py  requirements.txt  requiremtn_env.txt  run.py  run_dashboard_forever.sh  start_dashboard.sh  start_kichi_service.sh  video_roi_tool.ipynb
config/: config.py
kk-plates/: Makefile  README.md  pyproject.toml
kk-plates/.github/workflows/: ci.yml
kk-plates/configs/: default.yaml
kk-plates/data/samples/: sample_events.jsonl  sample_ground_truth.json  sample_metrics_export.json
kk-plates/notebooks/: 01_label_protocol.ipynb
kk-plates/scripts/: export_metrics_example.sh  generate_demo_files.py  generate_sample_video.py  prepare_data.py
kk-plates/src/kkplates/: __init__.py  cli.py  config.py
kk-plates/src/kkplates/alert/: preset_check.py
kk-plates/src/kkplates/capture/: rtsp_reader.py
kk-plates/src/kkplates/classify/: color_model.py  train_color_cnn.py
kk-plates/src/kkplates/count/: crossing.py
kk-plates/src/kkplates/detect/: model.py  train.py
kk-plates/src/kkplates/logging/: jsonlogger.py
kk-plates/src/kkplates/metrics/: aggregator.py
kk-plates/src/kkplates/roi/: roi_tool.py
kk-plates/src/kkplates/sinks/: powerbi.py
kk-plates/src/kkplates/track/: tracker.py
kk-plates/tests/: __init__.py  test_color_classifier.py  test_end2end_smoke.py  test_metrics_aggregator.py  test_roi_crossing.py
scripts/: connection_monitor.py  dashboard_watcher.py
src/: __init__.py  main_app.py  rtsp_analyzer.py
src/dashboard/: dashboard.py
src/dish_detection/: dish_detector.py
src/ocr_model/: number_detector.py
src/tracking/: backend_cache.py  conveyor_tracker.py  csv_conveyor_tracker.py  tracker_adapter.py
tests/: test_basic.py
(+3 files in other folders)
